<?xml version="1.0" encoding="utf-8"?>
<resources >

    <string name="directDownload">Download</string>
    <string name="showRelease">Show</string>
    <string name="new_version">New version</string>
</resources>